--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,10 @@ files:
   - source: /InstagramAPIScript/
     destination: /home/ubuntu/PrivateAPI/
 hooks:
+  ApplicationStop:
+    - location: scripts/stop_server
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/install_dependencies
       timeout: 300
