--- a/appspec.yml
+++ b/appspec.yml
@@ -7,12 +7,12 @@ hooks:
   ApplicationStop:
     - location: scripts/stop_server
       timeout: 300
-      runas: root
+      runas: ubuntu
   AfterInstall:
     - location: scripts/install_dependencies
       timeout: 300
-      runas: root
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/start_server
       timeout: 300
-      runas: root
+      runas: ubuntu
