--- a/front/package.json
+++ b/front/package.json
@@ -10,14 +10,12 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2",
-    "react-scripts": "0.9.0"
+    "react-scripts": "^3.1.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "react": "^15.4.2",
-    "react-checkbox-list": "0.0.2",
-    "react-dom": "^15.4.2",
-    "react-http-request": "^1.0.3"
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,5 +53,17 @@
     "env": {
       "browser": true
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
